applications/live-connect/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: live-connect
  labels:
    name: live-connect
