applications/live-connect/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: live-connect-frontend-ingress
  namespace: live-connect
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-to-https: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt # 추가된 부분
spec:
  rules:
  - host: live-connect.prod.kro.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: live-connect-frontend
            port:
              number: 80
  tls:
  - hosts:
    - live-connect.prod.kro.kr
    secretName: live-connect-frontend-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: live-connect-backend-ingress
  namespace: live-connect
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-to-https: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt # 추가된 부분
spec:
  rules:
  - host: live-connect.back-end.kro.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: live-connect-backend
            port:
              number: 4000
  tls:
  - hosts:
    - live-connect.back-end.kro.kr
    secretName: live-connect-backend-tls
